--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "transactions (>=0.2.0,<0.3.0)"
+    "transactions (>=0.2.0,<0.3.0)",
+    "python-dotenv (>=1.1.0,<2.0.0)"
 ]
 
 
